--- a/rcAdmin/ForwardingMAWB/Index.cshtml
+++ b/rcAdmin/ForwardingMAWB/Index.cshtml
@@ -7,7 +7,7 @@
     var deleteID = Request["id"];
     if (!deleteID.IsEmpty())
     {
-        var sqlDelete = "delete dbo.Forwarding_FSC where Id_Forwarding_FSC=@0";
+        var sqlDelete = "delete dbo.Forwarding_MAWB where Id_Forwarding_MAWB=@0";
         db.Execute(sqlDelete, deleteID);
         Response.Redirect("Index");
     }
@@ -25,7 +25,7 @@
       ",[Number_Of_Bags] " +
       ",[Total_Weight] " +
       ",[Clearance_Fee] " +
-  "FROM [Forwarding_MAWB] where Forwarding_MAWB_Number order by Id_Forwarding_MAWB desc";
+  "FROM [Forwarding_MAWB] order by Id_Forwarding_MAWB desc";
         var data = db.Query(qStr);
 
         grid = new WebGrid(source: data,
@@ -41,7 +41,7 @@
       ",[Total_Weight] " +
       ",[Clearance_Fee] " +
   "FROM [Forwarding_MAWB] where Forwarding_MAWB_Number like @0 order by Id_Forwarding_MAWB desc";
-        var data = db.Query(qStr);
+        var data = db.Query(qStr,searchAcc);
 
         grid = new WebGrid(source: data,
                                 rowsPerPage: 20);
@@ -57,11 +57,13 @@
     @RenderPage("../_Menu.cshtml")
 }
 <fieldset>
-    <legend>All Forwarding FSC | <a href="~/rcAdmin/ForwardingFSC/New">Create Forwarding FSC</a> </legend>
-    <form action="" method="POST">
-        <input type="text" id="search" name="searchAcc" value="" /> <input type="submit" value="Search" title="Search" />
-    </form>
-
+    <legend>All Forwarding FSC | <a href="~/rcAdmin/ForwardingMAWB/New">Create Forwarding MAWB</a> </legend>    
+    <div class="searchLine">
+        <form action="" method="POST">
+            <input type="text" id="search" name="searchAcc" value="" placeholder="Enter Account Name ..." class="ac ui-autocomplete-input" />
+            <button type="submit" value="Search" title="Search"><span class="icos-search"></span></button>
+        </form>
+    </div>
     <div id="grid">
         @grid.GetHtml(
                 tableStyle: "rcGrid",
@@ -69,19 +71,19 @@
                 alternatingRowStyle: "alt",
                 footerStyle: "pgr",
                 columns: grid.Columns(
-                    grid.Column(format: @<a href="~/rcAdmin/ForwardingFSC/Edit?id=@item.Id_Forwarding_FSC" title="Edit Page">
-                    <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
-                </a>),
+
                                         grid.Column("Forwarding_MAWB_Number", "Forwarding MAWB Number", style: "rcGB"),
                                         grid.Column("Sending_Date", "Sending date", style: "rcGB"),
                                         grid.Column("Number_Of_Shipments", "Number Of Shipments", style: "rcGB"),
                                         grid.Column("Number_Of_Bags", "Number Of Bags", style: "rcGB"),
                                                              grid.Column("Total_Weight", "Total_Weight", style: "rcGB"),
-                                        @*grid.Column("Created_Date", format: @<i>@item.Created_Date</i>),*@
- grid.Column(format: @<a href="~/rcAdmin/ForwardingFSC/Index?id=@item.Id_Forwarding_FSC" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
-            <img src="images/delete.gif" alt="Delete" class="rcGC" />
-        </a>)
-                    )
-                )
+                                                      grid.Column(format: @<a href="~/rcAdmin/ForwardingMAWB/Edit?id=@item.Id_Forwarding_MAWB" title="Edit Page">
+                                                                <img src="../images/edit_page.gif" alt="Edit" class="rcGC" />
+                                                            </a>),
+ grid.Column(format: @<a href="~/rcAdmin/ForwardingMAWB/Index?id=@item.Id_Forwarding_MAWB" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+    <img src="../images/delete.gif" alt="Delete" class="rcGC" />
+</a>)
+                      )
+                  )
     </div>
 </fieldset>
