--- a/rcAdmin/ForwardingMAWB/New.cshtml
+++ b/rcAdmin/ForwardingMAWB/New.cshtml
@@ -1,60 +1,58 @@
 ﻿@{
 
-    Page.Title = "Create new Forwarding FSC";
-
+    Page.Title = "Create new Forwarding MAWB";
+    var errMSG = "Create MAWB success";
     var pEditDate = DateTime.Now;
-    var fwService = "";
-    var fsc = "";
-    var vat = "";
-    var from_date = "";
-    var to_date = "";
-    var errMSG = "";
+    var mawbNumber = "";
+    var sendingDate = "";
+    var numOfShipments = 0;
+    var numOfBags = 0;
+    var totalWeight = 0;
+    var clearanceFee = new decimal(0);
 
 
 
-    //List all Layout files
-    DirectoryInfo dirInfo = new DirectoryInfo(Server.MapPath("~/rcLayouts"));
-    FileInfo[] fileInfo = dirInfo.GetFiles("_*.cshtml", SearchOption.TopDirectoryOnly);
 
-    // list all the body pages
-    List<string> pBodies = rcFunctions.pageBodies();
+    Validation.RequireField("numOfShipments", "Please enter vat as numeric");
+    Validation.RequireField("sendingDate", "Select from date");
+    Validation.RequireField("numOfBags", "Please enter vat as numeric");
+    Validation.RequireField("totalWeight", "Please enter vat as numeric");
+    Validation.RequireField("clearanceFee", "Please enter vat as numeric");
 
-    Validation.RequireField("vat", "Please enter vat as numeric");
-    Validation.RequireField("from_date", "Select from date");
-    Validation.RequireField("to_date", "Select to date");
 
-    fwService = Request["fwService"];
-    fsc = Request["fsc"];
-    vat = Request["vat"];
-    from_date = Request["from_date"];
-    to_date = Request["to_date"];
-    errMSG = "Create new FCS Success";
+
 
     var db = Database.Open("Checking_Master");
 
-    var sqlFwdSv = "SELECT [Id_Forwarding_Service] ,[Forwarding_Service_Name] FROM [dbo].[Forwarding_Service]";
-    var dataForwardingSv = db.Query(sqlFwdSv);
 
-    if (Commons.dateCompare(from_date, to_date))
+    if (IsPost && Validation.IsValid())
     {
-        if (IsPost && Validation.IsValid())
+        mawbNumber = Request["mawbNumber"];
+        sendingDate = Request["sendingDate"];
+        numOfShipments = int.Parse(Request["numOfShipments"]);
+        numOfBags = int.Parse(Request["numOfBags"]);
+        totalWeight = int.Parse(Request["totalWeight"]);
+        clearanceFee = decimal.Parse(Request["clearanceFee"]);
+
+        String sqlInsert = "INSERT INTO [dbo].[Forwarding_MAWB] " +
+           "([Forwarding_MAWB_Number] " +
+           ",[Sending_Date] " +
+           ",[Number_Of_Shipments] " +
+           ",[Number_Of_Bags] " +
+           ",[Total_Weight] " +
+           ",[Clearance_Fee]) " +
+           "VALUES " +
+           "(@0,@1,@2,@3,@4,@5)";
+        try
         {
-            String sqlInsert = "INSERT INTO [Forwarding_FSC] ([Id_Forwarding_Service] ,[FSC],[VAT],[From_Date],[To_Date]) " +
-                "VALUES (@0,@1,@2,convert(datetime,@3,101),convert(datetime,@4,101))";
-            try
-            {
-                db.Execute(sqlInsert, fwService, fsc, vat, from_date, to_date);
-            }
-            catch (Exception ex)
-            {
-                errMSG = "Create new FSC fail[" + ex.ToString() + "]";
-            }
+            db.Execute(sqlInsert, mawbNumber, sendingDate, numOfShipments, numOfBags, totalWeight, clearanceFee);
+        }
+        catch (Exception ex)
+        {
+
         }
     }
-    else
-    {
-        errMSG = Constants_.DATECOMPARE_INVALID;
-    }
+
     Commons.releaseDBConnecttion(db);
 }
 
@@ -76,51 +74,74 @@
     <script src="~/rcAdmin/css/datepicker/jquery.min.js"></script>
 </head>
 <script src="~/rcAdmin/css/datepicker/jquery-ui.min.js"></script>
+<script type="text/javascript">
+    function isNumberKey(evt) {
+        var charCode = (evt.which) ? evt.which : event.keyCode;
+        if (charCode != 46 && charCode > 31
+          && (charCode < 48 || charCode > 57))
+            return false;
+
+        return true;
+    }
+</script>
+
 <form method="post" action="">
-
     <fieldset>
-        <legend>New Forwarding FSC | <a href="~/rcAdmin/ForwardingFSC">All Forwarding FSC</a> </legend>
-        <ol>
-            <li>
-                <label for="pMasterPage">Forwarding Service:</label>
-                <select id="fwService" name="fwService" @Validation.For("fwService")>
-                    @foreach (var f in dataForwardingSv)
-                    {
-                        <option value="@f.Id_Forwarding_Service" @if (fwService == f.Forwarding_Service_Name) { <text> selected="selected" </text>            }>@rcFunctions.CleanRCNames(f.Forwarding_Service_Name)</option>
-                    }
-                </select> <img src="images/help.gif" alt="help" title="Select layout/theme for new page. All layouts are in rcLayouts folder - you can add/change/modify them to fit your needs" /> @Html.ValidationMessage("pMasterPage")
-            </li>
-            <li>
-                <label for="pMasterPage">FSC:</label>
-                <select id="fsc" name="fsc" @Validation.For("fsc")>
-                    <option value="0" selected="selected">DOX</option>
-                    <option value="1">WPX</option>
-                </select> <img src="images/help.gif" alt="help" title="Select layout/theme for new page. All layouts are in rcLayouts folder - you can add/change/modify them to fit your needs" /> @Html.ValidationMessage("pMasterPage")
-            </li>
-            <li>
-                <label for="pMasterPage">VAT:</label>
-                <input type="text" name="vat" id="vat" value="@vat" maxlength="100" @Validation.For("vat") /> <img src="images/help.gif" alt="help" title="Name of the new page. Ex.: about-us or contact-us" /> @Html.ValidationMessage("vat")
-            </li>
-            <li>
-                <label for="pMasterPage">From Date:</label>
-                <input type="text" name="from_date" id="from_date" readonly="readonly" value="@from_date" maxlength="100" @Validation.For("from_date") /> <img src="images/help.gif" alt="help" title="Name of the new page. Ex.: about-us or contact-us" /> @Html.ValidationMessage("from_date")
-                <script>
-                    $("#from_date").datepicker();
-                </script>
+        <div class="widget">
+            <div class="whead">
+                <h6> New Forwarding MAWB | <a href="~/rcAdmin/ForwardingMAWB/Index">All Forwarding MAWB</a> </h6>
+                <div class="clear"></div>
+            </div>
+            <div class="formRow">
+                <div class="grid3"><label for="pMasterPage">Forwarding MAWB Number:</label>  </div>
+                <div class="grid9"><input type="text" name="mawbNumber" id="mawbNumber" value="@mawbNumber" maxlength="100" @Validation.For("mawbNumber") /></div>
+                <div class="clear"></div>
+            </div>
+            <div class="formRow">
+                <div class="grid3">
+                    <label for="pMasterPage">Sending Date:</label></div>
+                <div class="grid9">
+                    <input type="text" name="sendingDate" id="sendingDate" readonly="readonly" value="@sendingDate" maxlength="100" @Validation.For("sendingDate") />
+                    <script>
+                        $("#sendingDate").datepicker();
+                    </script>
+                    </div>
+                <div class="clear"></div>
+                </div>
 
-            </li>
+            <div class="formRow">
+                <div class="grid3">
+                    <label for="pMasterPage">Number of shipment:</label></div>
+                <div class="grid9">
+                    <input type="text" name="numOfShipments" id="numOfShipments" onkeypress="return isNumberKey(event)" value="@numOfShipments" maxlength="100" @Validation.For("numOfShipments") /></div>
+                <div class="clear"></div>
+                </div>
 
-            <li>
-                <label for="pMasterPage">To Date:</label>
-                <input type="text" name="to_date" id="to_date" readonly="readonly" value="@to_date" maxlength="100" @Validation.For("to_date") /> <img src="images/help.gif" alt="help" title="Name of the new page. Ex.: about-us or contact-us" /> @Html.ValidationMessage("to_date")
-                <script>
-                    $("#to_date").datepicker();
-                </script>
-
-            </li>
-        </ol>
-        <p class="form-actions">
-            <input type="submit" value="Insert" title="Insert" />
-        </p>
+            <div class="formRow">
+                <div class="grid3">
+                    <label for="pMasterPage">Number of bags:</label></div>
+                <div class="grid9">
+                    <input type="text" name="numOfBags" id="numOfBags" onkeypress="return isNumberKey(event)" value="@numOfBags" maxlength="100" @Validation.For("numOfBags") /></div>
+                <div class="clear"></div>
+                </div>
+            <div class="formRow">
+                <div class="grid3">
+                    <label for="pMasterPage">Total weight:</label></div>
+                <div class="grid9">
+                    <input type="text" name="totalWeight" id="totalWeight" value="@totalWeight" maxlength="100" @Validation.For("totalWeight") /></div>
+                </div>
+            <div class="clear"></div>
+            <div class="formRow">
+                <div class="grid3">
+                    <label for="pMasterPage">Clearance_Fee:</label></div>
+                <div class="grid9">
+                    <input type="text" name="clearanceFee" id="clearanceFee" value="@clearanceFee" maxlength="100" @Validation.For("clearanceFee") /></div>
+                <div class="clear"></div>
+                </div>
+                
+                <p class="form-actions">
+                    <input type="submit" value="Insert" title="Insert" />
+                </p>
+            </div>
     </fieldset>
 </form>
