--- a/rcAdmin/ForwardingStatus/Index.cshtml
+++ b/rcAdmin/ForwardingStatus/Index.cshtml
@@ -47,7 +47,7 @@
     <fieldset>
         <div class="widget">
             <div class="whead">
-                <h6>All Forwarding Status | <a href="~/rcAdmin/ForwardingStatus/New.cshtml">Create Forwarding Status</a> </h6>
+                <h6>All Forwarding Status | <a href="~/rcAdmin/ForwardingStatus/New">Create Forwarding Status</a> </h6>
                 <div class="clear"></div>
             </div>
             <div class="searchLine">
@@ -68,10 +68,10 @@
                             grid.Column("Forwarding_Status_Desc", "Forwarding Status Desc", style: "rcGB"),
                             grid.Column("Comments", "Comments", style: "rcGB"),
                             grid.Column("Key_Words", "Keywords", style: "rcGB"),
-                            grid.Column(format: @<a href="~/rcAdmin/ForwardingStatus/Edit.cshtml?fsid=@item.Id_Forwarding_Status" title="Edit Page">
+                            grid.Column(format: @<a href="~/rcAdmin/ForwardingStatus/Edit?fsid=@item.Id_Forwarding_Status" title="Edit Page">
             <img src="../images/edit_page.gif" alt="Edit" class="rcGC" />
         </a>),
-                            grid.Column(format: @<a href="~/rcAdmin/ForwardingStatus/Index.cshtml?fsid=@item.Id_Forwarding_Status" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+                            grid.Column(format: @<a href="~/rcAdmin/ForwardingStatus/Index?fsid=@item.Id_Forwarding_Status" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
             <img src="../images/delete.gif" alt="Delete" class="rcGC" />
         </a>)
                           )
