Fix code 30/03 file BugLog.xlsx

--- a/rcAdmin/ForwardingCountries/Edit.cshtml
+++ b/rcAdmin/ForwardingCountries/Edit.cshtml
@@ -55,6 +55,7 @@
             "WHERE Id_Forwarding_Country = @4";
 
             db.Execute(sql, fwService, fwZone, country, pComment, pId);
+            Response.Redirect("Index");
         }
     }
 
