--- a/rcAdmin/ForwardingQuotation/Index.cshtml
+++ b/rcAdmin/ForwardingQuotation/Index.cshtml
@@ -84,6 +84,7 @@
                                      grid.Column("Type_Name", "Type", style: "rcGB"),
                                      grid.Column("Weight_From", "Weight From", style: "rcGB"),
                                      grid.Column("Weight_To", "Weight To", style: "rcGB"),
+                                     grid.Column("Pricing", "Price", style: "rcGB"),
                 grid.Column(format:
                 @<a href="~/rcAdmin/ForwardingQuotation/Edit?id=@item.Id_Forwarding_Zone&sv=@item.Id_Forwarding_Service" title="Edit Page"><img src="images/edit_page.gif" alt="Edit" class="rcGC" /></a>),
                 grid.Column(format:
