--- a/rcAdmin/ForwardingCountries/Index.cshtml
+++ b/rcAdmin/ForwardingCountries/Index.cshtml
@@ -56,7 +56,7 @@
                         grid.Column(format: @<a href="~/rcAdmin/ForwardingCountries/Edit?id=@item.Id_Forwarding_Country" title="Edit Page">
         <img src="images/edit_page.gif" alt="Edit" class="rcGC" />
     </a>),
-                        grid.Column(format: @<a href="Index?id=@item.Id_Forwarding_Country" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
+                        grid.Column(format: @<a href="~/rcAdmin/ForwardingCountries/Index?id=@item.Id_Forwarding_Country" title="Delete" onclick="return confirm('Are you sure you want to delete ?')">
         <img src="images/delete.gif" alt="Delete" class="rcGC" />
     </a>)
                       )
