--- a/rcAdmin/_Menu.cshtml
+++ b/rcAdmin/_Menu.cshtml
@@ -27,6 +27,7 @@
                 <li><a href="~/rcAdmin/ForwardingZone" id="forwardingZone">Forwarding Zone</a></li>
                 <li><a href="~/rcAdmin/ForwardingQuotation" id="forwardingQuotation">Forwarding Quotation</a></li>
                 <li><a href="~/rcAdmin/ForwardingServices" id="forwardingservice">Forwarding Service</a></li>
+                <li><a href="~/rcAdmin/ForwardingMAWB" id="forwardingmawb">Forwarding MAWB</a></li>
                 <li><a href="~/rcAdmin/ForwardingInvoice" id="forwardinginvoice">Forwarding Invoice</a></li>
                 <li><a href="~/rcAdmin/HandlingFee" id="forwardinginvoice">Handing Fee</a></li>
                 <li><a href="~/rcAdmin/Accounting" id="accounting">Accounting</a></li>
